--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lh": "lhci autorun --config=./lighthouse.config.js"
   },
   "dependencies": {
     "@nextshopkit/sdk": "^0.5.2",
-    "graphql": "^16.11.0",
     "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@next/bundle-analyzer": "^15.5.2",
+    "@types/node": "^24.3.1",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^0.6.2",
-    "eslint-config-next": "^0.2.4",
-    "tailwindcss": "^4",
+    "axe-core": "^4.10.3",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
     "typescript": "^5"
   }
 }
