--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint . --max-warnings=0",
     "typecheck": "tsc --noEmit",
     "lh": "lhci autorun --config=./lighthouse.config.js"
   },
   "dependencies": {
-    "@nextshopkit/sdk": "^0.5.2",
     "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -19,11 +18,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.5.2",
-    "@types/node": "^24.3.1",
     "@types/react": "^19",
     "axe-core": "^4.10.3",
     "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2",
     "typescript": "^5"
   }
 }
