--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.5.2",
+    "@types/node": "^24.3.1",
     "@types/react": "^19",
     "axe-core": "^4.10.3",
     "eslint": "^9.35.0",
