--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "lucide-react": "^0.543.0",
     "next": "^15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.5.2",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.3.1",
     "@types/react": "^19",
     "autoprefixer": "^10.4.21",
     "axe-core": "^4.10.3",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
