--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,10 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
+    "tests/**/*.ts",
+    "tests/**/*.tsx",
+    "playwright.config.ts",
+    "value-props.tsx",
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "postcss.config.js",
