--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,37 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Build
         run: npm run build
+
+      - name: Run Playwright tests
+        run: npm run test:e2e
+        env:
+          CI: true
+
+      - name: Run Lighthouse CI
+        run: npm run lh
+        env:
+          CI: true
+
+      - name: Upload Playwright Test Results
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+
+      - name: Upload Lighthouse CI Report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: lhci-report
+          path: ./.lighthouseci/
