--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
     "typecheck": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
     "lh": "lhci autorun --config=./lighthouse.config.js",
     "clean:shopify": "tools/shopify-cleanup/bin/index.sh",
     "test:analytics": "playwright test tests/analytics-flow.spec.ts",
@@ -39,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.5.3",
     "eslint-plugin-import": "^2.31.0",
