--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noEmit": true,
