Add HTTP Basic Auth protection for /admin routes
Implements username/password authentication for admin dashboards.
Only /admin/* routes require auth - rest of site remains public.

Security features:
- HTTP Basic Authentication for /admin/config and /admin/metrics
- Username defaults to 'admin' (configurable via ADMIN_USERNAME)
- Password required via ADMIN_PASSWORD environment variable
- Browser prompts for credentials on first access
- Credentials cached by browser during session

Environment variables:
- ADMIN_USERNAME (optional, defaults to 'admin')
- ADMIN_PASSWORD (required for production)

Usage:
1. Set ADMIN_PASSWORD in Vercel environment variables
2. Generate strong password: openssl rand -base64 24
3. Users will see browser login popup when accessing /admin routes

The rest of the website remains completely public and accessible.

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,13 @@ TABOOLA_ADVERTISER_ID=
 # Required for PUT/POST/DELETE operations on /api/config
 # CONFIG_ADMIN_TOKEN=
 # Alternatively, falls back to ADMIN_TOKEN if CONFIG_ADMIN_TOKEN is not set
+
+## Admin Dashboard Login Credentials (HTTP Basic Auth)
+# Username for accessing /admin routes (defaults to 'admin' if not set)
+# ADMIN_USERNAME=admin
+# Password for accessing /admin routes (REQUIRED - must be set in production)
+# Generate strong password: openssl rand -base64 24
+# ADMIN_PASSWORD=
 # ADMIN_TOKEN=
 
 ## Allowed IPs for config API (optional, comma-separated)
