--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noEmit": true,
@@ -15,7 +15,7 @@
     "resolveJsonModule": true,
     "moduleResolution": "bundler",
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -40,7 +40,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "postcss.config.js",
-    "tailwind.config.js"
+    "tailwind.config.js",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": ["node_modules", "scripts/validate-integration.ts"]
 }
